Modification des truc

--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -3,25 +3,25 @@
 {% block title %}Présentation Paul ETIGNARD{% endblock %}
 
 {% block body %}
-    <h1>Bienvnue sur mon Portfolio</h1>
+    <h1 class="mt-4">Bienvnue sur mon Portfolio</h1>
     <h3>Présentation :</h3>
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="../../data/img/1669805057799.jpg" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title">Paul ETIGNARD</h5>
-                    <p class="card-text fst-italic">Apprenti</p>
-                    <p class="card-text">Age : 18 ans (Bientot 19 inshallah)</p>
-                    <p class="card-text">Diplome : Bac STI2D option ITEC</p>
-                    <p class="card-text">Permmis de conduire : Oui</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <ul>
+        <li>Paul ETIGNARD</li>
+        <li>19 ans</li>
+        <li>Diplome : BAC STI2D option ITEC</li>
+        <li>Permis : Oui</li>
+    </ul>
+    <p>Actuellement en BTS SIO, passionné depuis mon plus jeune âge
+        par le monde du numérique et de l'informatique, je souhaite me
+        spécialiser dans le développement, afin d'être capable de coder
+        tout ce que je veux.
+    </p>
+
+    <p>
+        <img src="../../data/img/1669805057799.png" alt="img">
+    </p>
+
+
 
 
 
