Modification pour que ca fonctionne

--- a/templates/projets/projet.html.twig
+++ b/templates/projets/projet.html.twig
@@ -16,7 +16,7 @@
         <p class="card-text mt-3">{{ projet.description }}</p>
         Difficulté :
         <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: {{ projet.difficulté  * 10}}%" aria-valuenow="{{ projet.difficulté }}" aria-valuemin="0" aria-valuemax="10"></div>
+            <div class="progress-bar" role="progressbar" style="width: {{ projet.difficulté  * 10}}%" aria-valuenow="{{ projet.difficulte }}" aria-valuemin="0" aria-valuemax="10"></div>
         </div>
 
     </div>
